# gstroc

./: meson.build
src/: common.c  common.h  gstrocsend.c  meson.build  plugin.c
tests/: meson.build  sender.c
